--- a/static/html/guanli.html
+++ b/static/html/guanli.html
@@ -96,6 +96,9 @@
         <label for="media_url">媒体文件:</label> <input type="text" id="media_url" name="mediaUrl">
     </div>
     <div>
+        <label for="media_title">媒体标题:</label> <input type="text" id="media_title" name="mediaTitle">
+    </div>
+    <div>
         <label for="intro_title">简介标题:</label> <input type="text" id="intro_title" name="introductionTitle">
     </div>
     <div>
